# synapseos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  fly.toml  pyproject.toml
config/: conflict_rules.json
config/ontologies/: base.yaml
docs/plans/: quality-trust-features.md  reasoning-chat-features.md
scripts/: import_cooking.py  init_wacker.py
src/synapse/: __init__.py  cli.py  config.py  export.py
src/synapse/bootstrap/: __init__.py  pipeline.py  prompts.py
src/synapse/chat/: __init__.py  enrichment.py  prompts.py  reasoning.py  retrieval.py
src/synapse/extraction/: __init__.py  discovery.py  entities.py  pipeline.py  relationships.py  tables.py
src/synapse/gui/: app.py  bridge.py  theme.py  workers.py
src/synapse/gui/views/: activity.py  bootstrap.py  chat.py  (+6 more)
src/synapse/llm/: __init__.py  client.py  json_repair.py  templates.py
src/synapse/models/: __init__.py  document.py  entity.py  reasoning.py  relationship.py
src/synapse/parsers/: __init__.py  pdf.py  structure.py  text.py
src/synapse/resolution/: __init__.py  linker.py  normalizer.py
src/synapse/storage/: __init__.py  graph.py  instance_store.py  text_cache.py
src/synapse/tools/: config.py  graph_tools.py  search.py
src/synapse/web/: app.py  deps.py
tests/: run_det_bench.py  run_product_bench.py  run_qa_bench.py  table_extraction_bench.py  test_entity_resolution.py  test_graph_tools.py  test_instance_store.py  test_json_repair.py  test_normalizer.py  test_reasoning.py  test_reasoning_episodes.py  test_reasoning_models.py
(+12 files in other folders)
