[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapseos"
version = "0.2.0"
description = "Domain-agnostic knowledge operating system — bootstrap ontologies from documents, extract knowledge graphs, answer multi-hop reasoning questions"
requires-python = ">=3.11"
dependencies = [
    "falkordb>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymupdf>=1.24",
    "openai>=1.0",
    "click>=8.0",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
synapse = "synapse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
